2011-09-29  Vadim Kurland  <vadim@netcitadel.com>

	* SSHSession.cpp (startSession): enable fwbuilder to take
	advantage of GSSAPIAuthentication with openssh using suggestion by
	Matthias Witte witte@netzquadrat.de

	* PolicyCompiler_ipt.cpp (compile): fixes SF bug #3414382
	"Segfault in fwb_ipt dealing with empty groups". Compiler for
	iptables used to crash when an empty group was used in the
	"Interface" column of a policy rule.

2011-09-24  Vadim Kurland  <vadim@netcitadel.com>

	* NamedObjectsAndGroupsSupport.cpp (CreateObjectGroups::processNext):
	fixes #2660 "compiler for IOSACL crashed when address range appears
	in a rule AND object-group option is turned ON"

2011-09-19  Vadim Kurland  <vadim@netcitadel.com>

	* PolicyCompiler_cisco_acls.cpp (setInterfaceAndDirectionBySrc):
	see #2656 "Generated Cisco ASA access-list has duplicate entry".

	* snmp.cpp (SNMPCrawler::run_impl): fixes #2658 "snmp network
	discovery creates duplicate address and network objects"

	* ND_ProgressPage.h (class ND_ProgressPage): see #2657 snmp
	network discovery crashed if option "Confine scan to network" was
	used.

	* iosInterfaces.cpp (iosInterfaces::basicValidateInterfaceName):
	see #2655 Interface names are not allowed to have dash "-" even
	with interface verification off. We should allow "-" in the
	interface name for Cisco IOS

2011-09-04  Vadim Kurland  <vadim@netcitadel.com>

	* IPTImporter.cpp (IPTImporter::isSupportedTable): see #2653
	Importer for iptables checks that netfilter table used in
	the original iptables config is one of the tables we support.
	Currently only "filter", "mangle" and "nat" are supported. Also
	see #2651, #2652

	* FWObjectDatabase_tree_ops.cpp (_recursively_copy_subtree): see
	#2654 fixes GUI crash that occured if user copied a rule from file
	A to file B, then closed file B, opened file C and tried to copy
	the same rule from A to C'

2011-08-30  Vadim Kurland  <vadim@netcitadel.com>
