@@ -28,16 +28,10 @@
 ## These variables are set in OSConfigurator_linux24::printShellFunctions()
 ## About using "command" to find programs:
 ##
-## apparently "command" is POSIX compliant and should be widely
-## available. Another tool that could be used is "type -P" but that is
-## bash built-in
-##
-## Verified DD-WRT v24 and OpenWRT kamikaze 8.09.2 both have command
-## and type (both use busybox)
 
 find_program() {
   PGM=$1
-  command -v $PGM >/dev/null 2>&1 || {
+  which $PGM >/dev/null 2>&1 || {
     echo "$PGM not found"
     exit 1
   }
