@@ -1,3 +1,14 @@
+2011-10-02  Vadim Kurland  <vadim@netcitadel.com>
+
+	* shell_functions: see SF bug #3416900 "Replace `command` with
+	`which`".  Generated script (Linux/iptables) used to use "command
+	-v" to check if command line tools it needs are present on the
+	system. This was used to find iptables, lsmod, modprobe, ifconfig,
+	vconfig, logger and others. Some embedded Linux distributions,
+	notably TomatoUSB, come without support for "command". Switching to
+	"which" that is more ubuquitous and should be available pretty
+	much everywhere.
+
 2011-09-29  Vadim Kurland  <vadim@netcitadel.com>
 
 	* SSHSession.cpp (startSession): enable fwbuilder to take
